package bootstrap

import (
	"context"
	"fmt"
	"time"

	bootstrapCommands "nfxid/modules/system/application/bootstrap/commands"
	systemStateDomain "nfxid/modules/system/domain/system_state"
	"nfxid/pkgs/logx"

	"github.com/google/uuid"
)

// BootstrapInit ç³»ç»Ÿåˆå§‹åŒ–
// æµç¨‹ï¼š
// 1. åˆ›å»º system_state è®°å½•ï¼ˆinitialized = falseï¼‰ï¼Œè¡¨ç¤ºåˆå§‹åŒ–å¼€å§‹
// 2. é€šè¿‡ gRPC è°ƒç”¨å…¶ä»–æœåŠ¡åˆå§‹åŒ–åŸºç¡€æ•°æ®
// 3. ç­‰å¾…æ‰€æœ‰æœåŠ¡åˆå§‹åŒ–å®Œæˆ
// 4. æ›´æ–° system_state ä¸º initialized = true
func (s *Service) BootstrapInit(ctx context.Context, cmd bootstrapCommands.BootstrapInitCmd) error {
	logx.S().Info("ğŸš€ Starting system bootstrap initialization...")

	// æ­¥éª¤ 1: æ£€æŸ¥ç³»ç»Ÿæ˜¯å¦å·²ç»åˆå§‹åŒ–
	latestState, err := s.systemStateAppSvc.GetLatestSystemState(ctx)
	if err != nil {
		return fmt.Errorf("failed to get latest system state: %w", err)
	}

	if latestState.Initialized {
		return fmt.Errorf("system is already initialized")
	}

	// æ­¥éª¤ 2: åˆ›å»º system_state è®°å½•ï¼ˆinitialized = falseï¼‰ï¼Œè¡¨ç¤ºåˆå§‹åŒ–å¼€å§‹
	// ä½¿ç”¨æœ€å°åŒ–çš„å‚æ•°åˆ›å»ºï¼Œé»˜è®¤å€¼ç”± factory å¤„ç†
	now := time.Now().UTC()
	initialMetadata := map[string]interface{}{
		"bootstrap_started_at": now.Format(time.RFC3339),
		"admin_username":       cmd.AdminUsername,
		"services_initialized": []string{},
	}

	systemState, err := systemStateDomain.NewSystemState(systemStateDomain.NewSystemStateParams{
		Initialized:           false, // é»˜è®¤æœªåˆå§‹åŒ–
		InitializedAt:         nil,
		InitializationVersion: nil, // åœ¨è°ƒç”¨ Initialize æ—¶è®¾ç½®
		LastResetAt:           nil,
		LastResetBy:           nil,
		ResetCount:            0, // é»˜è®¤å€¼
		Metadata:              initialMetadata,
	})

	if err != nil {
		return fmt.Errorf("failed to create system state: %w", err)
	}

	// ä¿å­˜åˆå§‹çŠ¶æ€è®°å½•
	if err := s.systemStateRepo.Create.New(ctx, systemState); err != nil {
		return fmt.Errorf("failed to save initial system state: %w", err)
	}

	logx.S().Info("âœ… Created initial system state record (initialized=false)")

	// æ­¥éª¤ 3: åˆå§‹åŒ–å„ä¸ªæœåŠ¡çš„åŸºç¡€æ•°æ®
	initializedServices := []string{}

	// 3.1 åˆå§‹åŒ– Directory æœåŠ¡ - åˆ›å»ºç¬¬ä¸€ä¸ªç³»ç»Ÿç®¡ç†å‘˜ç”¨æˆ·
	logx.S().Info("ğŸ“¦ Initializing Directory service - creating admin user...")
	adminUserID, err := s.initDirectoryService(ctx, cmd)
	if err != nil {
		return fmt.Errorf("failed to initialize directory service: %w", err)
	}
	initializedServices = append(initializedServices, "directory")
	logx.S().Infof("âœ… Directory service initialized - admin user ID: %s", adminUserID)

	// 3.2 åˆå§‹åŒ– Access æœåŠ¡ - åˆ›å»ºåˆå§‹è§’è‰²å’Œæƒé™
	logx.S().Info("ğŸ“¦ Initializing Access service - creating roles and permissions...")
	adminRoleID, err := s.initAccessService(ctx, adminUserID)
	if err != nil {
		return fmt.Errorf("failed to initialize access service: %w", err)
	}
	initializedServices = append(initializedServices, "access")
	logx.S().Infof("âœ… Access service initialized - admin role ID: %s", adminRoleID)

	// 3.3 åˆå§‹åŒ– Auth æœåŠ¡ - åˆ›å»ºç”¨æˆ·å‡­è¯
	logx.S().Info("ğŸ“¦ Initializing Auth service - creating user credentials...")
	if err := s.initAuthService(ctx, adminUserID, cmd.AdminPassword); err != nil {
		return fmt.Errorf("failed to initialize auth service: %w", err)
	}
	initializedServices = append(initializedServices, "auth")
	logx.S().Info("âœ… Auth service initialized")

	// æ­¥éª¤ 4: ä½¿ç”¨ UpdateMetadata æ–¹æ³•æ›´æ–° metadata è®°å½•å·²åˆå§‹åŒ–çš„æœåŠ¡
	updatedMetadata := map[string]interface{}{
		"bootstrap_started_at":   systemState.Metadata()["bootstrap_started_at"],
		"admin_username":         systemState.Metadata()["admin_username"],
		"services_initialized":   initializedServices,
		"admin_user_id":          adminUserID.String(),
		"admin_role_id":          adminRoleID.String(),
		"bootstrap_completed_at": time.Now().UTC().Format(time.RFC3339),
	}

	// ä½¿ç”¨ domain æ–¹æ³•æ›´æ–° metadata
	if err := systemState.UpdateMetadata(updatedMetadata); err != nil {
		return fmt.Errorf("failed to update system state metadata: %w", err)
	}

	// ä¿å­˜æ›´æ–°åçš„ metadata
	if err := s.systemStateRepo.Update.Generic(ctx, systemState); err != nil {
		return fmt.Errorf("failed to save updated system state metadata: %w", err)
	}

	// æ­¥éª¤ 5: ç­‰å¾…æ‰€æœ‰æœåŠ¡åˆå§‹åŒ–å®Œæˆï¼ˆè¿™é‡Œå¯ä»¥æ·»åŠ å¥åº·æ£€æŸ¥ï¼‰
	logx.S().Info("â³ Waiting for all services to be ready...")
	// TODO: å®ç°æœåŠ¡å¥åº·æ£€æŸ¥é€»è¾‘
	time.Sleep(1 * time.Second) // ä¸´æ—¶ç­‰å¾…ï¼Œå®é™…åº”è¯¥æ£€æŸ¥æœåŠ¡å¥åº·çŠ¶æ€

	// æ­¥éª¤ 6: ä½¿ç”¨ domain entity çš„ Initialize æ–¹æ³•æ›´æ–° system_state ä¸º initialized = true
	logx.S().Info("âœ… All services initialized, marking system as initialized...")
	if err := systemState.Initialize(cmd.Version); err != nil {
		return fmt.Errorf("failed to initialize system state: %w", err)
	}

	// ä¿å­˜æ›´æ–°åçš„ system_state
	if err := s.systemStateRepo.Update.Generic(ctx, systemState); err != nil {
		return fmt.Errorf("failed to save initialized system state: %w", err)
	}

	logx.S().Info("ğŸ‰ System bootstrap initialization completed successfully!")
	return nil
}

// initDirectoryService åˆå§‹åŒ– Directory æœåŠ¡
// åˆ›å»ºç¬¬ä¸€ä¸ªç³»ç»Ÿç®¡ç†å‘˜ç”¨æˆ·
func (s *Service) initDirectoryService(ctx context.Context, cmd bootstrapCommands.BootstrapInitCmd) (uuid.UUID, error) {
	userIDStr, err := s.grpcClients.DirectoryClient.User.CreateUser(ctx, cmd.AdminUsername, "active", true)
	if err != nil {
		return uuid.Nil, fmt.Errorf("failed to create admin user: %w", err)
	}

	userID, err := uuid.Parse(userIDStr)
	if err != nil {
		return uuid.Nil, fmt.Errorf("invalid user ID returned: %w", err)
	}

	return userID, nil
}

// initAccessService åˆå§‹åŒ– Access æœåŠ¡
// åˆ›å»ºåˆå§‹è§’è‰²å’Œæƒé™
func (s *Service) initAccessService(ctx context.Context, adminUserID uuid.UUID) (uuid.UUID, error) {
	// 1. åˆ›å»ºç³»ç»Ÿç®¡ç†å‘˜è§’è‰²
	adminRoleDesc := "ç³»ç»Ÿç®¡ç†å‘˜è§’è‰²ï¼Œæ‹¥æœ‰æ‰€æœ‰æƒé™"
	adminRoleID, err := s.grpcClients.AccessClient.Role.CreateRole(ctx, "system.admin", "ç³»ç»Ÿç®¡ç†å‘˜", &adminRoleDesc, "global", true)
	if err != nil {
		return uuid.Nil, fmt.Errorf("failed to create admin role: %w", err)
	}

	// 2. åˆ›å»ºåŸºç¡€æƒé™
	permissions := []struct {
		key         string
		name        string
		description string
	}{
		{"system.*", "ç³»ç»Ÿç®¡ç†", "ç³»ç»Ÿæ‰€æœ‰æƒé™"},
		{"user.*", "ç”¨æˆ·ç®¡ç†", "ç”¨æˆ·æ‰€æœ‰æƒé™"},
		{"role.*", "è§’è‰²ç®¡ç†", "è§’è‰²æ‰€æœ‰æƒé™"},
		{"permission.*", "æƒé™ç®¡ç†", "æƒé™æ‰€æœ‰æƒé™"},
	}

	var permissionIDs []string
	for _, perm := range permissions {
		permDesc := perm.description
		permID, err := s.grpcClients.AccessClient.Permission.CreatePermission(ctx, perm.key, perm.name, &permDesc, true)
		if err != nil {
			return uuid.Nil, fmt.Errorf("failed to create permission %s: %w", perm.key, err)
		}
		permissionIDs = append(permissionIDs, permID)
	}

	// 3. å°†æƒé™åˆ†é…ç»™è§’è‰²
	for _, permID := range permissionIDs {
		_, err := s.grpcClients.AccessClient.RolePermission.CreateRolePermission(ctx, adminRoleID, permID)
		if err != nil {
			return uuid.Nil, fmt.Errorf("failed to assign permission %s to role: %w", permID, err)
		}
	}

	// 4. å°†è§’è‰²åˆ†é…ç»™ç”¨æˆ·ï¼ˆé€šè¿‡ Grantï¼‰
	_, err = s.grpcClients.AccessClient.Grant.CreateGrant(ctx, "user", adminUserID.String(), "role", adminRoleID, nil)
	if err != nil {
		return uuid.Nil, fmt.Errorf("failed to grant role to user: %w", err)
	}

	roleID, err := uuid.Parse(adminRoleID)
	if err != nil {
		return uuid.Nil, fmt.Errorf("invalid role ID returned: %w", err)
	}

	return roleID, nil
}

// initAuthService åˆå§‹åŒ– Auth æœåŠ¡
// åˆ›å»ºç”¨æˆ·å‡­è¯ï¼ˆå¯†ç ï¼‰
func (s *Service) initAuthService(ctx context.Context, userID uuid.UUID, password string) error {
	// åˆ›å»ºç”¨æˆ·å‡­è¯ï¼Œé¦–æ¬¡ç™»å½•ä¸éœ€è¦å¼ºåˆ¶ä¿®æ”¹å¯†ç 
	if err := s.grpcClients.AuthClient.UserCredential.CreateUserCredential(ctx, userID.String(), password, nil, false); err != nil {
		return fmt.Errorf("failed to create user credential: %w", err)
	}

	return nil
}
